--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 <body>
 
   <iframe
-    src="https://cloud.protopie.io/p/08486ecc7ff23a4485d09ed8?ui=false&scaleToFit=true&enableHotspotHints=false&cursorType=touch&mockup=false&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1"
-    allow="fullscreen">
+    src="https://cloud.protopie.io/p/abae618c2bc777c8670dab51?ui=false&scaleToFit=true&enableHotspotHints=false&cursorType=touch&mockup=false&bgColor=%23F5F5F5&bgImage=undefined&playSpeed=1">
   </iframe>
 
   <div id="privacyShield" aria-hidden="true">
